components/ua/messages/overlays/prod/patch-image.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messages-service
spec:
  template:
    spec:
      containers:
        - name: messages-service
          # version: 1.4.0
          image: ghcr.io/isisbusapps/messages-service@sha256:d8de1a156399d9a4b9e08461135e9c048856b4237ef7e5bd28f5e5224d7d6138
