components/ua/messages/overlays/prod/patch-image.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messages-service
spec:
  template:
    spec:
      containers:
        - name: messages-service
          # version: 1.3.0
          image: ghcr.io/isisbusapps/messages-service:1.3.0
